RTGOV-604 Fix cropped dependency graph svg image - width sorted, but height currently fixed

--- a/ui/overlord-rtgov-ui-base/src/main/webapp/css/rtgov-ui.css
+++ b/ui/overlord-rtgov-ui-base/src/main/webapp/css/rtgov-ui.css
@@ -338,6 +338,10 @@ footer hr {
   padding: 0px;
 }
 
+#servicegraph svg {
+  width: 100%;
+}
+
 .overlord-actions {
   border: 1px solid rgb(211, 211, 211);
   border-top-left-radius: 5px;
